[package]
name = "tailscale-localapi"
description = "Client for the Tailscale local API"
version = "0.5.0"
authors = ["John Downey"]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/tailscale-localapi"
homepage = "https://github.com/jtdowney/tailscale-localapi"

[dependencies]
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["net", "rt"] }

[dev-dependencies]
libc = "0.2"
